<resources>
    <string name="app_name">Paragownik</string>
    <string name="save">Zapisz</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="cancel">Anuluj</string>
    <string name="today">Dzisiaj</string>
    <string name="optional_section">(opcjonalne)</string>
    <string name="error_invalid_store_id">Błąd: Nieprawidłowy identyfikator sklepu.</string>
    <string name="error_cannot_identify_client">Błąd: Nie można zidentyfikować klienta do usunięcia.</string>
    <string name="error_cannot_get_receipt_data">Błąd: Nie można pobrać danych paragonu do usunięcia.</string>
    <string name="error_invalid_receipt_id">Błąd: Nieprawidłowy identyfikator paragonu.</string>
    <string name="error_receipt_not_found">Błąd: Paragon nie został znaleziony.</string>
    <string name="save_success_message">Zmiany zapisane pomyślnie</string>
    <string name="delete_success_message">Element usunięty pomyślnie</string>
    <string name="error_not_found">Błąd: Nie znaleziono elementu.</string>
    <string name="error_invalid_date_format">Błąd: Nieprawidłowy format daty (DD-MM-YYYY).</string>
    <string name="error_invalid_verification_date_format">Błąd: Nieprawidłowy format daty weryfikacji (DD-MM-YYYY).</string>
    <string name="error_duplicate_receipt">Błąd: Paragon o podanym numerze, dacie i sklepie już istnieje.</string>
    <string name="error_store_number_missing">Błąd: Numer drogerii nie może być pusty.</string>
    <string name="error_database">Błąd: Wystąpił problem z bazą danych.</string>
    <string name="error_unknown">Błąd: Wystąpił nieznany błąd.</string>
    <string name="error_inserting_client">Błąd podczas wstawiania klienta do bazy.</string>
    <string name="error_creating_store">Nie udało się utworzyć lub pobrać drogerii: %1$s</string>
    <string name="error_creating_store_edit">Nie udało się utworzyć lub pobrać drogerii podczas edycji: %1$s</string>
    <string name="cd_add_client_fab">Dodaj nowego klienta</string>
    <string name="view_clients_button">Pokaż Klientów</string>
    <string name="main_activity_title">Lista Drogerii</string>
    <string name="view_all_receipts_button">Pokaż Wszystkie Paragony</string>
    <string name="info_button_description">O aplikacji</string>
    <string name="cd_add_receipt_fab">Dodaj nowy paragon dla tego sklepu</string>
    <string name="receipt_list_activity_title_prefix">Paragony Drogerii</string>
    <string name="add_client_receipts_title">Dodaj paragony klienta</string>
    <string name="store_number_hint">Drogeria</string>
    <string name="receipt_number_hint">Numer paragonu</string>
    <string name="receipt_date_hint">Data paragonu (DD-MM-YYYY)</string>
    <string name="cash_register_number_hint">Nr kasy (opcjonalnie)</string>
    <string name="verification_section_title">Weryfikacja (opcjonalne):</string>
    <string name="verification_date_hint">DD-MM-YYYY</string>
    <string name="client_data_section_title">Dane klienta (opcjonalne):</string>
    <string name="client_description_hint">Opis klienta</string>
    <string name="client_app_number_hint">Numer aplikacji klienta</string>
    <string name="amodit_number_hint">Numer Amodit</string>
    <string name="add_another_store_receipt_button">Dodaj paragon kolejnej drogerii</string>
    <string name="error_fill_required_receipt_fields">Wypełnij wszystkie wymagane pola paragonów (numer, data, sklep)</string>
    <string name="error_add_at_least_one_receipt">Dodaj przynajmniej jeden paragon</string>
    <string name="error_invalid_receipt_date_format">Nieprawidłowy format daty paragonu (DD-MM-YYYY)</string>
    <string name="error_invalid_additional_receipt_date_format">Nieprawidłowy format daty w dodatkowym paragonie (DD-MM-YYYY)</string>
    <string name="error_invalid_additional_verification_date_format">Nieprawidłowy format daty weryfikacji w dodatkowym paragonie (DD-MM-YYYY)</string>
    <string name="cd_remove_receipt_button">Usuń ten paragon</string>
    <string name="section_title_client_photos">Zdjęcia klienta:</string>
    <string name="button_add_client_photo">Dodaj zdjęcie klienta</string>
    <string name="section_title_transaction_photos">Zdjęcia transakcji:</string>
    <string name="button_add_transaction_photo">Dodaj zdjęcie transakcji</string>
    <string name="edit_receipt_client_title">Szczegóły Paragonu</string>
    <string name="edit_button_text">Edytuj</string>
    <string name="error_fill_required_edit_fields">Wypełnij numer sklepu, numer paragonu i datę paragonu.</string>
    <string name="delete_receipt_confirmation_title">Potwierdzenie usunięcia</string>
    <string name="delete_receipt_confirmation_message">Czy na pewno chcesz usunąć ten paragon?\n\n(Jeśli to ostatni paragon klienta lub drogerii, zostaną oni również usunięci).</string>
    <string name="delete_client_confirmation_title">Potwierdzenie usunięcia klienta</string>
    <string name="delete_client_confirmation_message">Czy na pewno chcesz usunąć tego klienta?\n\nUWAGA: Usunięcie klienta spowoduje USUNIĘCIE WSZYSTKICH jego paragonów! Drogerie, które staną się puste, również zostaną usunięte.</string>
    <string name="delete_receipt_button_text">Usuń ten paragon</string>
    <string name="delete_client_button_text">Usuń klienta i wszystkie paragony</string>
    <string name="save_changes_button_text">Zapisz zmiany</string>
    <string name="label_client_app_number">Nr app:</string>
    <string name="label_amodit_number">Amodit:</string>
    <string name="label_cash_register_number">Nr kasy:</string>
    <string name="button_show_client_receipts">Pokaż wszystkie paragony klienta</string>
    <string name="button_show_store_receipts">Pokaż wszystkie paragony drogerii</string>
    <string name="button_add_receipts_to_client">Dodaj paragony do tego klienta</string>
    <string name="verification_section_title_view">Weryfikacja:</string>
    <string name="client_data_section_title_view">Dane klienta:</string>
    <string name="verification_label">Weryfikacja:</string>
    <string name="no_verification_date">Brak daty</string>
    <string name="no_client_description">Brak opisu klienta</string>
    <string name="cd_edit_receipt_icon">Edytuj paragon</string>
    <string name="store_number_prefix">Drogeria:</string>
    <string name="cd_receipt_item_store_number">Numer drogerii dla paragonu</string>
    <string name="client_list_title">Lista Klientów</string>
    <string name="client_item_id_prefix">ID: </string>
    <string name="client_item_app_number_prefix">Nr app:</string>
    <string name="client_item_amodit_number_prefix">Amodit:</string>
    <string name="cd_client_list_item">Element listy klientów</string>
    <string name="cd_client_photo_placeholder">Miniatura zdjęcia klienta</string>
    <string name="cd_add_change_photo_button">Dodaj lub zmień zdjęcie klienta</string>
    <string name="error_copying_image">Błąd podczas kopiowania zdjęcia.</string>
    <string name="cd_receipt_item_client_photo">Miniatura zdjęcia klienta powiązanego z paragonem</string>
    <string name="cd_client_item_client_photo">Miniatura zdjęcia klienta</string>
    <string name="cd_client_large_photo">Zdjęcie klienta (duże)</string>
    <string name="cd_photo_thumbnail">Miniatura zdjęcia</string>
    <string name="cd_delete_photo_button">Usuń zdjęcie</string>
    <string name="photo_already_added">To zdjęcie już zostało dodane.</string>
    <string name="error_permission_read_photo">Brak uprawnień do odczytu zdjęcia.</string>
    <string name="error_loading_image">Błąd podczas ładowania obrazu.</string>
    <string name="cd_full_screen_image">Zdjęcie na pełnym ekranie</string>
    <string name="client_receipts_title">Paragony Klienta</string>
    <string name="error_invalid_client_id">Błąd: Nieprawidłowy identyfikator klienta.</string>
    <string name="error_client_not_found">Błąd: Nie znaleziono klienta.</string>
    <string name="cd_add_receipt_to_client_fab">Dodaj nowy paragon dla tego klienta</string>
    <string name="more_options_button_text">Więcej opcji dla klienta</string>
    <string name="add_receipt_to_client_title">Dodaj Paragony dla Klienta</string>
    <string name="add_receipt_button">Dodaj kolejny paragon</string>
    <string name="save_receipts_button">Zapisz paragony</string>
    <string name="delete_client_button_text_short">Usuń klienta</string>
    <string name="about_title">O Aplikacji</string>
    <string name="back_button_description">Powrót</string>
    <string name="about_description">
        Paragownik to aplikacja stworzona dla pracowników ochrony w drogeriach.\n\n
        <b>Główne funkcje:</b>\n\n
        <b>1. Ekran Główny (Lista Drogerii):</b>\n
        • Przeglądanie listy drogerii, w których zarejestrowano paragony.\n
        • Kliknięcie drogerii pokazuje listę jej paragonów.\n
        • Przycisk (+) pozwala dodać nowego klienta z paragonami (z dowolnej drogerii).\n
        • Przycisk "Pokaż Klientów" prowadzi do listy wszystkich zarejestrowanych klientów.\n
        • Przycisk "Pokaż Wszystkie Paragony" wyświetla listę wszystkich paragonów z wszystkich drogerii.\n\n
        <b>2. Paragony Drogerii:</b>\n
        • Przeglądanie paragonów przypisanych do wybranej drogerii (sortowane wg daty weryfikacji).\n
        • Widoczne dane klienta (opis, numery, zdjęcie, nr kasy).\n
        • Przycisk (+) pozwala dodać nowego klienta z paragonem dla tej konkretnej drogerii.\n
        • Kliknięcie paragonu otwiera jego szczegóły do edycji.\n\n
        <b>3. Lista Klientów:</b>\n
        • Przeglądanie wszystkich zarejestrowanych klientów (z miniaturą zdjęcia).\n
        • Kliknięcie klienta otwiera jego profil z listą paragonów.\n\n
        <b>4. Paragony Klienta:</b>\n
        • Wyświetlanie danych wybranego klienta.\n
        • Lista paragonów przypisanych do tego klienta (sortowane wg numeru drogerii).\n
        • Przycisk (+) pozwala dodać kolejne paragony dla tego klienta.\n
        • Ikona strzałki w nagłówku prowadzi do edycji danych klienta.\n\n
        <b>5. Dodawanie Klienta / Paragonów:</b>\n
        • Wprowadzanie danych pierwszego paragonu (drogeria, nr paragonu, data, opcjonalny nr kasy oraz data weryfikacji - checkbox "Dzisiaj").\n
        • Wprowadzanie danych klienta (opis, nr aplikacji, nr Amodit - opcjonalne).\n
        • Dodawanie wielu zdjęć klienta i zdjęć transakcji (z galerii).\n
        • Możliwość dodania kolejnych paragonów (z innych drogerii) dla tego samego klienta.\n\n
        <b>6. Edycja Paragonu / Klienta:</b>\n
        • Dwa tryby: widoku i edycji (przełączane ikoną ołówka).\n
        • Widok: Wyświetla dane paragonu (z nr kasy) i klienta, duże zdjęcia (kliknięcie otwiera pełny ekran z zoomem).\n
        • Edycja: Pozwala modyfikować dane paragonu (w tym nr kasy) i klienta, dodawać i usuwać zdjęcia.\n
        • Przyciski: "Zapisz zmiany", "Usuń paragon", "Usuń klienta".\n
        • Usunięcie ostatniego paragonu klienta usuwa też klienta.\n
        • Usunięcie paragonu lub zmiana jego sklepu może usunąć pustą drogerię.\n\n
        <b>7. Edycja Klienta:</b>\n
        • Dwa tryby: widoku ("Dane Klienta") i edycji ("Edytuj Dane Klienta").\n
        • Pozwala modyfikować dane klienta oraz zarządzać jego zdjęciami (dodawanie/usuwanie).\n
        • Przyciski: "Zapisz zmiany", "Usuń klienta" (usuwa klienta i WSZYSTKIE jego paragony).\n\n
        <b>8. Wszystkie Paragony:</b>\n
        • Lista wszystkich paragonów z wszystkich drogerii, pogrupowana wg drogerii.\n
        • Widoczne dane klienta przy każdym paragonie.\n
        • Kliknięcie paragonu otwiera jego szczegóły.\n\n
        <b>Pamiętaj:</b>\n
        • Usuwanie klienta jest nieodwracalne i usuwa wszystkie powiązane z nim dane (paragony, zdjęcia).\n
        • Usunięcie ostatniego paragonu klienta usuwa również klienta
    </string>
    <string name="about_creator">Twórca: Radosław Kamiński</string>
    <string name="about_email">radoslaw.kaminski.mail@gmail.com</string>
</resources>